--- a/compare.html
+++ b/compare.html
@@ -9,6 +9,8 @@
 	    <script src="js/main.js"></script>
 	    <script src="js/goods.js"></script>
 	    <script src="js/login_form.js"></script>
+	     <script src="js/catalog.js"></script>
+	    <script src="js/catalog_2.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
@@ -123,8 +125,8 @@
                 </ul>
                 <div class="clear"></div>
 
-                <div class="items_menu">
-                	<h2>Сравнение товаров(12)</h2>
+                <div class="items_menu margin-items">
+                	<p>Сравнение товаров<span>(12)</span></p>
                     <span>Все характеристики</span>
                     <a>Только различающиеся</a>
 				</div>
@@ -139,13 +141,17 @@
                         	<span>Перламутровый</span>
                         	<span>Плотный</span>
                         	<span>15мл</span>
-                        	<span id="good_count" class="float-none">
-                             	<div id="good_count_inc"></div>
-                             	<div id="good_count_dec"></div>
-                             	<input type="text" value="1" style="width: 10px;">
-                       		 </span>
-                       		 <span id="buy_btn">Купить</span>
-                       		 <p>Отложить</p>
+                        	<div class="cat_cost" style="width: 220px;">
+                        	<p>390</p>
+                        	<div class="cat_cnt" cost="123" set_cost="ok">
+                        		<div class="cat_cnt_inc"></div>
+                        		<div class="cat_cnt_dec"></div>
+                        		<input type="text" value="1" style="width: 10px;">
+                        	</div>
+                        	<div class="cat_buy">Купить</div>
+                        	<a>Отложить</a>
+ 							</div>
+ 							<div class="clear"></div>
                        		 <a href="#" class="closed"></a>
                     	</div>
 
@@ -160,13 +166,17 @@
                         	<span>Перламутровый</span>
                         	<span>Плотный</span>
                         	<span>15мл</span>
-                        	<span id="good_count" class="float-none">
-                             	<div id="good_count_inc"></div>
-                             	<div id="good_count_dec"></div>
-                             	<input type="text" value="1" style="width: 10px;">
-                       		 </span>
-                       		 <span id="buy_btn">Купить</span>
-                       		 <p>Отложить</p>
+                        	<div class="cat_cost" style="width: 220px;">
+                        	<p>390</p>
+                        	<div class="cat_cnt" cost="123" set_cost="ok">
+                        		<div class="cat_cnt_inc"></div>
+                        		<div class="cat_cnt_dec"></div>
+                        		<input type="text" value="1" style="width: 10px;">
+                        	</div>
+                        	<div class="cat_buy">Купить</div>
+                        	<a>Отложить</a>
+ 							</div>
+ 							<div class="clear"></div>
                        		 <a href="#" class="closed"></a>
                     	</div>
 
@@ -181,13 +191,17 @@
                         	<span>Перламутровый</span>
                         	<span>Плотный</span>
                         	<span>15мл</span>
-                        	<span id="good_count" class="float-none">
-                             	<div id="good_count_inc"></div>
-                             	<div id="good_count_dec"></div>
-                             	<input type="text" value="1" style="width: 10px;">
-                       		 </span>
-                       		 <span id="buy_btn">Купить</span>
-                       		 <p>Отложить</p>
+                        	<div class="cat_cost" style="width: 220px;">
+                        	<p>390</p>
+                        	<div class="cat_cnt" cost="123" set_cost="ok">
+                        		<div class="cat_cnt_inc"></div>
+                        		<div class="cat_cnt_dec"></div>
+                        		<input type="text" value="1" style="width: 10px;">
+                        	</div>
+                        	<div class="cat_buy">Купить</div>
+                        	<a>Отложить</a>
+ 							</div>
+ 							<div class="clear"></div>
                        		 <a href="#" class="closed"></a>
                     	</div>
 
@@ -202,13 +216,17 @@
                         	<span>Перламутровый</span>
                         	<span>Плотный</span>
                         	<span>15мл</span>
-                        	<span id="good_count" class="float-none">
-                             	<div id="good_count_inc"></div>
-                             	<div id="good_count_dec"></div>
-                             	<input type="text" value="1" style="width: 10px;">
-                       		 </span>
-                       		 <span id="buy_btn">Купить</span>
-                       		 <p>Отложить</p>
+                        	<div class="cat_cost" style="width: 220px;">
+                        	<p>390</p>
+                        	<div class="cat_cnt" cost="123" set_cost="ok">
+                        		<div class="cat_cnt_inc"></div>
+                        		<div class="cat_cnt_dec"></div>
+                        		<input type="text" value="1" style="width: 10px;">
+                        	</div>
+                        	<div class="cat_buy">Купить</div>
+                        	<a>Отложить</a>
+ 							</div>
+ 							<div class="clear"></div>
                        		 <a href="#" class="closed"></a>
                     	</div>
 
@@ -216,6 +234,12 @@
                     </div>
                  <div class="clear"></div>
         		</div>
+				<div class="border-block"></div>
+				<div class="border-center"></div>
+				<div class="remove-products">
+	        		<a>Удалить все товары из сравнения</a>
+	        		<a href="#" class="closed"></a>
+				</div>
         	</div>
 
         </div>
