add subscribe page

--- a/subscribe.html
+++ b/subscribe.html
@@ -137,6 +137,29 @@
             <div class="subscribe">
                 <h2>Подписаться на рассылку</h2>
                 <input type="text" placeholder="E-mail">
+                <div class="categories-subscribe">
+                    <h4>Рубрики:</h4>
+                    <ul>
+                        <li>
+                            <input id="cfirst" type="checkbox" name="first" hidden>
+                            <label for="cfirst">Новости магазина<br><span>Ежедневная рассылка новостей магазина.</span></label>
+                        </li>
+                        <li>
+                            <input id="csecond" type="checkbox" name="second" hidden>
+                            <label for="csecond">Мастер-классы<br><span>Приглашения на открытые мастер-классы</span></label>
+                        </li>
+                        <li>
+                            <input id="cthird" type="checkbox" name="third" hidden>
+                            <label for="cthird">Новинки<br><span>Оповещение о новых поступлениях</span></label>
+                        </li>
+                        <li>
+                            <input id="ctfourth" type="checkbox" name="fourth" hidden>
+                            <label for="ctfourth">Распродажа<br><span>Оповещение о объявлении распрадажи</span></label>
+                        </li>
+                    </ul>
+                </div>
+                <p>После подписки Вам будет выслано письмо со ссылкой подтверждения.</p>
+                <button>Подписаться</button>
             </div>
 
                 
