--- a/goood.html
+++ b/goood.html
@@ -115,7 +115,8 @@
 
                 <ul id="top_navigation" class="top_navigation">
                  	<div id="top_navigation_space"></div>
-                 	<li  class="top_navigation"><a>Главная</a></li>					<li  class="top_navigation"><a>Лаки, эффекты, кракелюры</a></li>
+                 	<li  class="top_navigation"><a>Главная</a></li>
+					<li  class="top_navigation"><a>Лаки, эффекты, кракелюры</a></li>
                  	<li  class="top_navigation"><a>CND Vinylux</a></li>
                  	<li  class="top_navigation"><a>CND Vinylux, цвет Crimson Sash 15 ml</a></li>
                     <span class=" top_navigation_smm_button"><a href="" class="mail"></a></span>
@@ -161,7 +162,8 @@
                                <span>Отложить</span>
                           </div>
 
-                          <span id="sub_scr">Профессиональный лак терракотово-бордовый,						   перламутровый, плотный</span>
+                          <span id="sub_scr">Профессиональный лак терракотово-бордовый,
+						   перламутровый, плотный</span>
 
                           <div id="item_data_table">
                                <div class="item_data_row">
@@ -191,7 +193,36 @@
                 	<div id="good_subscription">
 						<div class="good_subscription_menu">
 		                    <span>Описание</span>
-		                    <a>Отзывы</a>
+		                    <a class="click-comment">Отзывы</a>
+                            <div class="comment_form_mask"></div>
+                            <div class="comment-form">
+                                <div class="comment-close"></div>
+                                <div class="comment-arrow"></div>
+                                <div class="comment-left">
+                                    <h3>Добавить отзыв</h3>
+                                    <input type="text" placeholder="Имя" class="name">
+                                    <textarea placeholder="Ваш отзыв"></textarea>
+                                    <div class="code-image">
+                                        <input type="text" placeholder="Код с картинки" class="code-image">
+                                        <div></div>
+                                    </div>
+                                    <button>Добавить отзыв</button>
+                                </div>
+                                <div class="comment-right">
+                                    <p>— А можно проще?</p>
+                                    <p>— Конечно!</p>
+                                    <p>Вы можете оставить отзыв, воспользовавшись вашим аккайнтом в соц. сетях:</p>
+                                    <ul>
+                                        <li class="lf_vk"></li>
+                                        <li class="lf_pr"></li>
+                                        <li class="lf_od"></li>
+                                        <li class="lf_jj"></li>
+                                        <li class="lf_mail"></li>
+                                        <li class="lf_fb"></li>
+                                        <li class="lf_twit"></li>
+                                     </ul>
+                                </div>
+                            </div>
 						</div>
                 		<span>
 							Vinylux - это двухступенчатая система нанесения лака, состоящая из цветного покрытия и закрепителя. Благодаря инновационной технологии ваш маникюр станет более совершенным, а процесс еего выполнения еще более быстрым. Больше не нужно использовать базу, "самоклеющийся" состав цветного покрытия не содержит вредных веществ и одновременно обеспечивает защиту вашим ногтям. Закрепитель позволяет лаку держаться на ногтях неделю без сколов и царапин. Vinylux высыхает за восемь с половиной минут и не требует использования UV-лампы. Сейчас насчитывается 62 модных цвета покрытия, включая более 30 цветов, которые совпадают с популярными оттенками CND Shellac. Новинка от CND Vinylux - это более стойкое, блестящее покрытие, которое держится неделю.
