--- a/compare.html
+++ b/compare.html
@@ -136,7 +136,7 @@
         			<div class="item item-compare" style="background-image:url('images/test_item.png')">
                     	<div class="doods_item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
-                        	<span>Нержавеющая сталь, ручное изготовление</span>
+                        	<p>Нержавеющая сталь, ручное изготовление</p>
                         	<span>США</span>
                         	<span>Перламутровый</span>
                         	<span>Плотный</span>
@@ -161,7 +161,7 @@
         			<div class="item item-compare" style="background-image:url('images/test_item.png')">
                     	<div class="doods_item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
-                        	<span>Нержавеющая сталь, ручное изготовление</span>
+                        	<p>Нержавеющая сталь, ручное изготовление</p>
                         	<span>США</span>
                         	<span>Перламутровый</span>
                         	<span>Плотный</span>
@@ -186,7 +186,7 @@
         			<div class="item item-compare" style="background-image:url('images/test_item.png')">
                     	<div class="doods_item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
-                        	<span>Нержавеющая сталь, ручное изготовление</span>
+                        	<p>Нержавеющая сталь, ручное изготовление</p>
                         	<span>США</span>
                         	<span>Перламутровый</span>
                         	<span>Плотный</span>
@@ -211,7 +211,7 @@
         			<div class="item item-compare" style="background-image:url('images/test_item.png')">
                     	<div class="doods_item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
-                        	<span>Нержавеющая сталь, ручное изготовление</span>
+                        	<p>Нержавеющая сталь, ручное изготовление</p>
                         	<span>США</span>
                         	<span>Перламутровый</span>
                         	<span>Плотный</span>
