--- a/subscribe.html
+++ b/subscribe.html
@@ -142,7 +142,7 @@
                     <ul>
                         <li>
                             <input id="cfirst" type="checkbox" name="first" hidden>
-                            <label for="cfirst">Новости магазина<br><span>Ежедневная рассылка новостей магазина.</span></label>
+                            <label for="cfirst" class="label-hover">Новости магазина<br><span>Ежедневная рассылка новостей магазина.</span></label>
                         </li>
                         <li>
                             <input id="csecond" type="checkbox" name="second" hidden>
